// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the );
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an  BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package privacy.krypton;

import "google/protobuf/duration.proto";

option cc_api_version = 2;
option java_outer_classname = "TelemetryProto";
option java_package = "com.google.android.libraries.privacy.ppn.internal";
option java_api_version = 2;
option java_multiple_files = true;

message KryptonTelemetry {
  // Provides latency for each individual Auth requests. Array size represents
  // the total auths that were done.
  repeated google.protobuf.Duration auth_latency = 1;

  // Provides latency for each AddEgressRequests. Array size represents the
  // total number of AddEgress that were called.
  repeated google.protobuf.Duration egress_latency = 2;

  optional uint32 successful_rekeys = 3;

  optional uint32 network_switches = 4;

  optional uint32 control_plane_failures = 5;
  optional uint32 data_plane_failures = 6;
  optional uint32 session_restarts = 7;
}
